# embeddedAndRT

./: .gitmodules  README.md
Chapter4/mycropython/: mqtt.py  rest.py  socketServer.py
RP2040-freeRTOS-Blink/: CMakeLists.txt
RP2040-freeRTOS-Blink/src/: main.c
RP2040-freeRTOS-Mutex/src/: main.c
RP2040-freeRTOS-Queue/src/: main.c
RP2040-freeRTOS-semaphore/src/: main.c
RP240-blink/: CMakeLists.txt
RP240-blink/blink/: blink.c
chapter1/: CMakelists.txt
chapter1/src/: CMakelists.txt
chapter1/src/rms/: CMakelists.txt  main.cpp
chapter2/: README.md
chapter3/: CMakeLists.txt  CMakelists.txt  README.md
chapter3/src/: FreeRTOSConfig.h  crash.c  driver.c  main.c  multicore.c  port.c
chapter3/system/: system.c
chapter3_1/: CMakeLists.txt  FreeRTOSConfig.h  README.md  lwipopts.h  socket.c
chapter3_1/tools/: wavServer.py  wavtrasnmitter.py
pico-debug-uf2/: debugprobe.uf2
